# UniSched

./: .calendar.cc.swo  .calendar.h.swo  .event.cc.swo  .event.h.swo  .event.h.swp  .gitignore  .group.cc.swo  .group.h.swn  .person.cc.swo  .person.cc.swp  .person.h.swo  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  FAQ.md  Makefile  Makefile.in  README  README.md  \  active_time.cc  active_time.h  calendar.cc  calendar.cpp  calendar.h  cmake_install.cmake  configure  configure.ac  event.cc  event.cpp  event.h  group.cc  group.cpp  group.h  group_content.h  human.cc  human.h  main.cc  main.cpp  (+11 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
auxiliary-tools/: psql2sqlite.pl  run.sh  sqlite2html.sh  unischedrc.example  yaml2html.sh
cmake/: FindReadline.cmake  Findlex.cmake  Findncurses.cmake  Findsqlite.cmake  Findyacc.cmake  Findyaml-cpp.cmake  git.cmake
cmake/c++11/: CheckCXX11Features.cmake  c++11-test-__func__-N2340.cpp  c++11-test-constexpr-N2235.cpp  c++11-test-cstdint.cpp  c++11-test-enum_classes-N2347.cpp  c++11-test-long_long-N1811.cpp  c++11-test-nullptr-N2431.cpp  c++11-test-rvalue_references-N2118.cpp  c++11-test-sizeof_member-N2253.cpp  c++11-test-static_assert-N1720.cpp  c++11-test-static_assert-N1720_fail_compile.cpp  c++11-test-variadic_templates-N2555.cpp
doc/html/: annotated.html  classes.html  files.html  functions.html  functions_0x61.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x71.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x7e.html  functions_enum.html  functions_eval.html  functions_func.html  functions_func_0x61.html  functions_func_0x62.html  functions_func_0x63.html  functions_func_0x64.html  functions_func_0x65.html  functions_func_0x66.html  functions_func_0x67.html  functions_func_0x68.html  functions_func_0x69.html  functions_func_0x6c.html  functions_func_0x6d.html  functions_func_0x6e.html  functions_func_0x6f.html  (+38 more)
doc/html/search/: all_5f.html  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  (+114 more)
doc/latex/: annotated.tex  doxygen.sty  files.tex  hierarchy.tex  namespaces.tex  refman.tex
doc/xml/: dir_3cdd47e94afa284c5999dcfb2b2022cc.xml  dir_745bf63c63bae1e149493c933b14246e.xml  dir_90aee1310cac8742bd4481f2e3fecb89.xml  dir_9a8e864bee81192fa4af7d548a7471e3.xml  dir_b638e6e50e8352a15403e759ae85028d.xml  dir_c9ac3a95baa06aa87ba20966878132ea.xml  index.xml
fixtures/: database.yaml  database_old.yaml  dummy.lua  example.lua  groups.csv  gui_stub.lua  rc.lua  rc.lua.with_gui  unisched.db
src/: .calendar.cpp.swp  .command_add.cpp.swp  .commands.h.swp  .main.cpp.swp  .person.cpp.swp  .person.h.swp  .userinterface.cpp.swp  .userinterface.h.swp  :w  CMakeLists.txt  DataStorage.cpp  DataStorage.h  Makefile  Makefile.am  Makefile.in  backend.cpp  calendar.cpp  calendar.h  cmake_install.cmake  command_add.cpp  command_all.cpp  command_clone.cpp  command_delete.cpp  command_dequeue.cpp  command_enqueue.cpp  command_exclude.cpp  command_exit.cpp  command_generate.cpp  command_help.cpp  command_include.cpp  command_link.cpp  command_merge.cpp  command_print.cpp  command_select.cpp  commands.cpp  commands.h  data_storage.cpp  data_storage.h  event.cpp  event.h  (+21 more)
src/algorithms/: aux.lua  calendar.lua  conflicts.lua  factory.lua  get_calendar.lua  object.lua  repeat.lua  resource.lua  task.lua  task_system.lua  traits.lua
src/backends/: CMakeLists.txt
src/backends/storage/: CMakeLists.txt  sqlite.cpp
src/backends/ui/: CMakeLists.txt
src/core/: CMakeLists.txt  abstractgroup.cpp  abstractstorage.cpp  abstractui.cpp  algorithm.cpp  config.cpp  event.cpp  field.cpp  group.cpp  manageableobject.cpp  manager.cpp  managersobject.cpp  module.cpp  object.cpp  person.cpp  utils.cpp  windows-spike.cpp  yaml.cpp
src/include/: .swp  abstractgroup.h  abstractstorage.h  abstractui.h  abstractuserinterface.h  algorithm.h  backend.h  config.h  event.h  field.h  group.h  link.h  manageableobject.h  manager.h  managersobject.h  module.h  object.h  paths.hpp  person.h  storableobject.h  storage.h  usersobject.h  utils.h  windows-spike.h  yaml.h
src/modules/: CMakeLists.txt  paths.hpp  paths.hpp.in
src/modules/algorithms/: CMakeLists.txt  repeat.cpp
src/modules/storage/: CMakeLists.txt  filestorage.cpp  filestorage.hpp  sqlite.cpp  yaml.h
src/modules/storage/textfile/: CMakeLists.txt  filestorage.cpp  yaml.l  yaml.y
src/modules/ui/: CMakeLists.txt  Readline.cpp  Readline_config.hpp  SReadline.h  cli.cpp  cli.hpp  cli_py.cpp  cli_py_names.hpp.in  dummy.cpp  dummy.hpp  luaui.cpp  paths.hpp.in
src/modules/ui/ncurses/: CMakeLists.txt  main.cpp
src/scripts/: ui.lua
src/storage/: CMakeLists.txt  abstractstorage.cpp  abstractstorage.h  filestorage.cpp  storableobject.cpp  storableobject.h  storage.h  test.cpp
src/tests/: CMakeLists.txt  architecture_with_backends.cpp  architecture_with_modules.cpp  connect_event.cpp  connect_group.cpp  connect_person.cpp  create_event.cpp  create_group.cpp  create_person.cpp  disconnect_event.cpp  disconnect_group.cpp  disconnect_person.cpp  model_classes_are_real.cpp  remove_connected_object.cpp  remove_event.cpp  remove_group.cpp  remove_person.cpp  search.cpp  set_defined_field_right.cpp  set_defined_field_wrong.cpp  set_link_field.cpp  set_undefined_field_right.cpp  set_undefined_field_wrong.cpp  tester.cpp  testingui.h
src/ui/: CMakeLists.txt  abstractui.cpp  usersobject.cpp
src/userinterface/: CMakeLists.txt  abstractuserinterface.cpp  usersobject.cpp
src/web/: server.lua
src/web/static/: index.html  info.js  list.js  objects.js  properties.lua  style.js  ui.css  ui.js
test_data/: persons.csv
tests/: test.txt  test2.txt
uml/: UniSched.uml  UniSched.uml~
(+1066 files in other folders)
