AM_CPP_FLAGS=-I$(srcdir)
bin_PROGRAMS=raspisator
raspisator_SOURCES=main.cpp person.cpp event.cpp group.cpp calendar.cpp userinterface.cpp table_data_storage.cpp data_storage.cpp file_storage.cpp commands.cpp command_exit.cpp command_all.cpp command_print.cpp command_help.cpp command_clone.cpp command_merge.cpp command_exclude.cpp command_include.cpp command_add.cpp command_link.cpp queue.cpp
