AM_CPP_FLAGS=-I$(srcdir)
bin_PROGRAMS=raspisator
raspisator_SOURCES=main.cpp
raspisator_SOURCES+=person.cpp event.cpp group.cpp calendar.cpp queue.cpp event_template.cpp 
raspisator_SOURCES+=userinterface.cpp
raspisator_SOURCES+=commands.cpp command_exit.cpp command_all.cpp command_print.cpp command_help.cpp command_clone.cpp command_merge.cpp command_exclude.cpp command_include.cpp command_add.cpp command_link.cpp command_delete.cpp command_enqueue.cpp command_dequeue.cpp command_select.cpp
raspisator_SOURCES+=table_data_storage.cpp data_storage.cpp file_storage.cpp 
