cmake_minimum_required (VERSION 2.8.3)

if (WITH_YAML)
    #add_library (yaml SHARED yaml.cpp)
    add_library (filestorage SHARED filestorage.cpp)
    target_link_libraries (filestorage yaml-cpp)
endif (WITH_YAML)

if (WITH_SQLITE)
    check_include_file_cxx ("sqlite3.h" HAVE_SQLITE)
    if (HAVE_SQLITE)
        add_library (sqlitestorage SHARED sqlite.cpp)
        target_link_libraries (sqlitestorage sqlite3)
    else(HAVE_SQLITE)
        message (FAIL_ERROR "sqlite3.h not found on your system, but sqlite module build requested.")
    endif (HAVE_SQLITE)
endif (WITH_SQLITE)
