cmake_minimum_required (VERSION 2.8.3)

if (WITH_DUMMYUI)
    add_library (dummyui SHARED dummy.cpp)
    target_link_libraries (dummyui)
endif (WITH_DUMMYUI)

if (WITH_CLI)
    if (READLINE_FOUND)
        add_library (cli SHARED cli.cpp)
        target_link_libraries (cli readline)
    else (READLINE_FOUND)
        message (FAIL_ERROR " readline not found, but cli build requested.")
    endif (READLINE_FOUND)
endif (WITH_CLI)
